# libIA

./: README.md  pyproject.toml
libia/algorithm/: kmean_clusturing.py
libia/mathModules/: matrices.py  vectors.py
tests/testAlgorithm/: test_kmean.py
tests/testMathModules/: test_matrices.py  test_vectors.py
