[tool.poetry]
name = "libia"
version = "0.1.0"
description = ""
authors = ["Hesils <quentindesvignes0373@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
